Identify OS in VectorMathLibrary